tests/org.eclipse.php.core.tests/workspace/errors/php54/unfinishedTraitDecl2.pdtt
--TEST--
Test unfinished trait declaration error reporting
--FILE--
<?php
trait A {
5
}
?>
--EXPECT--
[line=3, start=16, end=17] syntax error, unexpected '5', expecting 'function'